[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scene/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound Effect/UI SFX/click1.ogg" type="AudioStream" id=2]
[ext_resource path="res://SupportScene/seek_truth_main_menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Environment/main_menu_background_AI_art.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/red_button_i_created.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Buttons/red_button_i_created_pressed.png" type="Texture" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.8877
margin_right = 1.8877
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="ButtonContainer" type="VBoxContainer" parent="Margin"]
margin_left = 337.0
margin_top = 50.0
margin_right = 687.0
margin_bottom = 550.0
size_flags_horizontal = 4
custom_constants/separation = 20
alignment = 1

[node name="Play" type="TextureButton" parent="Margin/ButtonContainer"]
margin_top = 97.0
margin_right = 350.0
margin_bottom = 172.0
rect_min_size = Vector2( 350, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Margin/ButtonContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.737255 )
custom_fonts/font = ExtResource( 3 )
text = "Play"
align = 1
valign = 1

[node name="Options" type="TextureButton" parent="Margin/ButtonContainer"]
margin_top = 192.0
margin_right = 350.0
margin_bottom = 267.0
rect_min_size = Vector2( 350, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Margin/ButtonContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.737255 )
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1

[node name="Control" type="Control" parent="Margin/ButtonContainer"]
margin_top = 287.0
margin_right = 350.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 20 )

[node name="Exit" type="TextureButton" parent="Margin/ButtonContainer"]
margin_top = 327.0
margin_right = 350.0
margin_bottom = 402.0
rect_min_size = Vector2( 350, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Margin/ButtonContainer/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.737255 )
custom_fonts/font = ExtResource( 3 )
text = "Exit"
align = 1
valign = 1

[node name="ButtonSFX" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 2 )

[connection signal="pressed" from="Margin/ButtonContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Margin/ButtonContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Margin/ButtonContainer/Exit" to="." method="_on_Exit_pressed"]
